# learn-gpgpu

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  Dockerfile.build  NOTES.md  README.md  astro.config.mjs  astro.config.ts  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: test.yml
astro/: raw-files.ts
content/: config.ts
content/docs/: _FIXME.md
content/docs/docs/: SIMT.md  _opcodes.md  glossary.md  goals.md  index.md  internals.md
content/rosetta/: TODO.md
content/talvos/: fill.spvasm.  fill.tcf.  fill.test.ts  fill_idx.spvasm.  fill_idx.tcf.  fill_idx.test.ts  phi-swap.spvasm.  phi-swap.tcf.  vecadd.tcf.
hack/: build-wasm.sh  update-dist.sh
hack/misc/: spirv-add-ext.sh  spirv-build-headers.sh  spirv-headers-repo-update.sh
lib/: bitset.bench.ts  bitset.test.ts  bitset.ts  executionUniverse.test.ts  executionUniverse.ts  stlBinding.test.ts  stlBinding.ts  talvos.ts
lib/binding/: NOTES.md  arena.test.ts  arena.ts  index.ts  ptr.test.ts  ptr.ts  strings.bench.ts  strings.mem.bench.ts  strings.test.ts  strings.ts
pages/: index.astro
styles/: index.css
tools/: Cargo.toml  dwarf.rs
wasm/: CMakeLists.txt  Dockerfile.emscripten  TODO.md  talvos-wasm.d.ts  talvos-wasm.js  talvos-wasm.wasm.dwp  talvos-wasm.wasm.map  talvos-wasm.worker.js  talvos.test.ts  talvos[fixme].test.ts
wasm/__snapshots__/: talvos.test.ts.snap
wasm/cmake/Modules/: FindSPIRV-Headers.cmake  FindSPIRV-Tools.cmake
wasm/testdata/: dup_entry.spvasm  main.spvasm  ticks.spvasm
